--- a/commontitlebar/src/main/res/layout/actionbar.xml
+++ b/commontitlebar/src/main/res/layout/actionbar.xml
@@ -1,75 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+                android:id="@+id/relay_background"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:orientation="vertical">
 
-
-    <RelativeLayout
-        android:id="@+id/relay_background"
+    <TextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="48dp"
+        android:layout_marginRight="48dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:singleLine="true"
+        android:text="标题"
+        android:textSize="16sp"
+        android:visibility="visible"/>
 
-      <ImageView
-          android:id="@+id/iv_left"
-          android:layout_width="48dp"
-          android:layout_height="48dp"
-          android:layout_centerVertical="true"
-          android:padding="16dp"
-          android:background="@drawable/selector_trans_divider"
-          android:visibility="gone"/>
+
+    <LinearLayout
+        android:id="@+id/ll_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_trans_divider">
+
+        <ImageView
+            android:id="@+id/iv_left"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="14dp"
+            android:src="@drawable/icon_back_black"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/tv_left"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
+            android:padding="14dp"
             android:text="返回"
-            android:background="@drawable/selector_trans_divider"
-            android:padding="16dp"
             android:visibility="gone"/>
 
-      <TextView
-          android:id="@+id/tv_title"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_centerInParent="true"
-          android:text="我的标题"
-          android:singleLine="true"
-          android:textSize="14sp"
-          android:visibility="gone"/>
+    </LinearLayout>
 
-      <ImageView
-          android:id="@+id/iv_right"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_alignParentRight="true"
-          android:layout_centerVertical="true"
-          android:background="@drawable/selector_trans_divider"
-          android:padding="16dp"
-          android:visibility="gone" />
+    <LinearLayout
+        android:id="@+id/ll_right_container"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/selector_trans_divider"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_right"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="14dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="完成"
-            android:background="@drawable/selector_trans_divider"
-            android:padding="16dp"
+            android:padding="14dp"
             android:visibility="gone"/>
 
-  </RelativeLayout>
+    </LinearLayout>
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_below="@id/relay_background"
-        android:background="#e1e1e1" />
+        android:layout_alignParentBottom="true"
+        android:background="@color/divider"/>
 
 </RelativeLayout>
