--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="config_color_divider">@color/divider</item>
+        <item name="CustomTitleBarStyle">@style/QDTopBar</item>
+        <item name="titlebar_height">56dp</item>
+    </style>
+
+    <style name="QDTopBar" parent="CustomTitleBar.TopBar">
+        <item name="titlebar_bg_color">@color/colorAccent</item>
+        <item name="titlebar_title_text_size">16sp</item>
+        <item name="titlebar_title_color">@color/color_white</item>
+        <item name="titlebar_subtitle_color">@color/config_color_white</item>
+        <item name="titlebar_text_btn_color_state_list">@color/s_topbar_btn_color</item>
+        <item name="titlebar_image_btn_height">48dp</item>
     </style>
 
 </resources>
