--- a/commontitlebar/src/main/res/values/colors.xml
+++ b/commontitlebar/src/main/res/values/colors.xml
@@ -1,4 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="divider">#20000000</color>
+    <color name="divider">#DEE0E2</color>
+    <color name="config_color_divider_darken">#D4D6D8</color>
+    <color name="config_color_transparent">#00000000</color>
+    <color name="config_color_background">#F4F5F7</color>
+    <color name="config_color_background_pressed">#EEEFF1</color>
+    <color name="config_color_black">#212832</color>
+    <color name="config_color_pressed">#EEEEF0</color>
+    <color name="config_color_blue">#1B88EE</color>
+
+    <color name="config_color_gray_1">#353C46</color>
+    <color name="config_color_gray_2">#49505A</color>
+    <color name="config_color_gray_3">#5D646E</color>
+    <color name="config_color_gray_4">#717882</color>
+    <color name="config_color_gray_5">#858C96</color>
+    <color name="config_color_gray_6">#99A0AA</color>
+    <color name="config_color_gray_7">#ADB4BE</color>
+    <color name="config_color_gray_8">#C4C8D0</color>
+    <color name="config_color_gray_9">#D8DCE4</color>
+
+    <color name="config_color_white">#ffffff</color>
+    <color name="config_color_50_blue">#801B88EE</color>
+    <color name="config_color_red">#FA3A3A</color>
 </resources>
