--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.stx.xhb.customtitilebardemo.MainActivity">
 
-    <com.stx.xhb.commontitlebar.CustomTitleBar2
+    <com.stx.xhb.commontitlebar.CustomTitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="?attr/titlebar_height"/>
