优化标题栏控件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/titlebar_height"/>
 
+    <com.stx.xhb.commontitlebar.CustomTitleBar
+        android:id="@+id/titlebar2"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/titlebar_height"/>
+
+    <com.stx.xhb.commontitlebar.CustomTitleBar
+        android:id="@+id/titlebar3"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/titlebar_height"/>
+
 </LinearLayout>
