--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="config_color_divider">@color/divider</item>
+        <!--标题栏主题样式-->
         <item name="CustomTitleBarStyle">@style/QDTopBar</item>
+        <!--设置标题栏高度-->
         <item name="titlebar_height">56dp</item>
     </style>
 
